--- a/sass/partials/_checkout-contact.scss
+++ b/sass/partials/_checkout-contact.scss
@@ -8,6 +8,7 @@
 
 
 .fc-content div.woocommerce form .fc-wrapper .form-row.create-account {
+	margin-top: $global-spacing-extra-small;
 	margin-bottom: 0;
 }
 
